[package]
name = "simple_term_attr"
version = "0.4.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/BayonetArch/simple_term_attr"
readme = "README.md"
description = "A very simple library to use some terminal attributes like colors."

[dependencies]

[target.'cfg(windows)'.dependencies]
windows = "0.62.2"
